--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>I'M <span>Mercy Bore</span></h1>
         <p>I am a Full-Stack Web Developer.I provide clean code and I make website more interactive to the User.My major interest is growing to be a team work led world-class software developer.
         </p>
-        <p>Find some of my projects uploaded to github <span><a href="https://github.com/macc254" target="_blank" style="color:var(--yellow)">here</a></span></p> <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
+        <p>Find some of my projects uploaded to <span><a href="https://github.com/macc254" target="_blank" style="color:var(--yellow)">github. </a></span></p> <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
     </section>
 
@@ -125,8 +125,7 @@
                         <i class="fas fa-graduation-cap"></i>
                         <span>Sept 2016-Feb 2022</span>
                         <h3>Meru University of Science and Technology</h3>
-                        <p>My educational experience includes recently completing my bootcamp at Moringa School which has greatly contributed to my development skills such as in Javascript,Jquery,HTML,CSS,Bootstrap,Git collaboration,teamwork,softskills and
-                            presentation.
+                        <p>I was able to graduate with a Degree in bsc in computer science. I learnt alot in my time in campus including programming with (c#,c,C++,Java,HTML,CSS,Javascript,SQL), AI, cryptography, data structures and alogorithms, cloud technology, human computer interaction and much more
                     </div>
                 </div>
 
@@ -145,28 +144,32 @@
             <div class="box-container">
 
                 <div class="box">
-                    <a href="https://macc254.github.io/Delani-Studio/" target="_blank"> <img src="Images/delanihome.png" alt="">
+                    <a href="https://macc254.github.io/Delani-Studio/" target="_blank"> <img src="Images/delani.png" alt="">
                     </a>
                 </div>
 
                 <div class="box">
-                    <img src="Images/pizza.png" alt="">
+                    <a href="https://mercy-neighbourhood.herokuapp.com/" target="_blank"> <img src="Images/hood.png" alt="">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="https://mercy-news-api.herokuapp.com/" target="_blank"> <img src="Images/newsapi-project.png" alt="">
+                    </a>
                 </div>
 
                 <div class="box">
-                    <img src="Images/tour.png" alt="">
+                    <a href="https://mercy-awwwards.herokuapp.com/" target="_blank"> <img src="Images/1awwward.png" alt="">
+                    </a>
                 </div>
 
                 <div class="box">
-                    <img src="Images/women.jpg" alt="">
+                    <a href="https://macc254.github.io/Github-Search/" target="_blank"> <img src="Images/gsearch.png" alt="">
+                    </a>
                 </div>
 
                 <div class="box">
-                    <img src="Images/mercado.png" alt="">
-                </div>
-
-                <div class="box">
-                    <img src="Images/children.jpeg" alt="">
+                    <a href="https://mercy-gallery.herokuapp.com/" target="_blank"> <img src="Images/gallery-project.png" alt="">
+                    </a>
                 </div>
 
             </div>
@@ -208,8 +211,12 @@
 
             </div>
 
+           
         </section>
-
+        
+        <div class="footer">
+            <h1> copyright &copy; 2022 made with 💛 by mercy bore</h1>
+        </div>
         <!-- contact section ends -->
 
 
